examples/test/testpolicy19321.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19321
  namespace: namespace385
spec:
  podSelector:
    matchLabels:
      key47: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value45
      podSelector:
        matchLabels:
          key42: value42
          key6: value42
          key30: value35
